style.css
:root[data-theme="light"] {
    --text: #1f191a;
    --background: #fbeff9;
    --primary: #f26376;
    --secondary: #e5cde1;
    --accent: #4f8a96;
    --darker-accent: #2e5157;
}

:root[data-theme="dark"] {
    --text: #e6e0e1;
    --background: #10040e;
    --primary: #9c0d20;
    --secondary: #321a2e;
    --accent: #69a4b0;
    --darker-accent: #30484c;
}

@font-face {
    font-family: "SourceCodePro";
    src: url("assets/font/SourceCodePro/SourceCodePro-VariableFont_weight.ttf") format('truetype');
    font-weight: 200 900;
    font-style: normal;
}

@font-face {
    font-family: "SourceCodePro";
    src: url("assets/font/SourceCodePro/SourceCodePro-Italic-VariableFont_weight.ttf") format('truetype');
    font-weight: 200 900;
    font-style: italic;
}

html {
    color: var(--text);
    background: var(--background);
    font-family: SourceCodePro, monospace;
    font-size: 16px;
}

body {
    margin: 0; /* Remove default margin */
    display: grid;
    flex-direction: column;
    min-height: 100vh; /* Set the minimum height of the body to 100% of the viewport height */
    user-select: none;
}

.fade-in {
    opacity: 1;
    transition: opacity 0.5s cubic-bezier(0.2, 0, 0, 1);
}

a,
a:visited,
a:active,
a:hover {
    color: var(--primary);
    text-decoration: none;
    font-weight: 700;
}

img#mainpic {
    width: 100%;
    height: auto;
    border-radius: 25px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown_button {
    padding: 10px;
    background-color: var(--secondary);
    color: var(--text);
    border: none;
    cursor: pointer;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--secondary);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    padding: 10px;
    right: 0;
    left: auto;
    top: 100%;
    transition: all 1s cubic-bezier(0.18, 0.89, 0.4, 1.15);
    transform-origin: top;
    transform: scaleY(0);
    opacity: 0;
}

.dropdown-content button {
    width: 100%;
    padding: 10px;
    text-align: center;
    border: none;
    background-color: transparent;
    cursor: pointer;
    transition: all 0.3s ease;
    color: var(--text);
}

.dropdown-content button:hover {
    background-color: var(--accent);
    color: var(--background);
}

.langButton {
    display: block;
    width: 100%;
    padding: 10px;
    text-align: left;
    border: none;
    background-color: transparent;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.langButton:hover {
    background-color: var(--accent);
    color: var(--background);
}

.dropdown:hover .dropdown-content {
    display: block;
    opacity: 100%;
    transform: scaleY(1); /* Scale the menu to its natural height on hover */
}

h1 {
    color: var(--accent);
    font-size: 3em;
    text-align: center;
}

h2 {
    color: var(--primary);
    font-size: 2em;
    font-style: italic;
}

div.header {
    background-color: var(--secondary);
    position: fixed;
    top: 0;
    left: 25px;
    right: 25px;
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.4, 1.15);
    z-index: 99;
}

div.footer {
    background-color: var(--primary);
    color: var(--text);
    padding: 16px;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    box-shadow: 0 -5px 10px #00000033;
    margin-top: auto; /* Push the footer to the bottom of the container */
    display: flex;
    justify-content: space-between;
}

/* Show different cursor so people know it's clickable */
div.score {
    cursor: pointer;
    margin: 0;
    padding: 0 0 8px;
    text-align: right;
}

menu#links-menu {
    list-style-type: none;
    display: flex;
    flex-grow: 1; /* Allow the navbar to take up the remaining space */
    margin: 12px;
    column-gap: 20px;
    padding: 0;
    justify-content: center; /* Center the navbar text */
    flex-wrap: wrap;
}

.navbar {
    display: inline;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.2em;
    text-align: center;
    text-decoration: none;
    font-stretch: ultra-expanded;
    transition: letter-spacing 0.3s cubic-bezier(0.18, 0.89, 0.4, 1.15);
}

.navbar a {
    text-decoration: none;
    color: var(--primary);
    font-size: 1.2em;
    transition: color 0.3s ease;
}

@media screen and (min-width: 800px) {
    li.navbar:hover {
        display: inline-block;
        letter-spacing: 0.5em;
    }
}

@media screen and (max-width: 801px) {
    li.navbar:hover {
        text-decoration: underline var(--primary);
    }
}

#navImage {
    height: 48px;
    width: 48px;
    padding: 16px;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
}

button.dropdown_button {
    background-color: transparent;
    border: none;
    padding: 0;
    height: 48px;
    width: 48px;
    margin-right: 25px;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
}

button.theme {
    background-color: transparent;
    border: none;
    padding: 0;
    height: 48px;
    width: 48px;
    margin-right: 25px;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
}

#navImage:hover,
button.theme:hover {
    transform: scale(1.1);
}

#navImage:active,
button.theme:active {
    transform: scale(0.8);
}

#themeIcon {
    height: 100%;
    width: 100%;
}

#langIcon {
    height: 100%;
    width: 100%;
}

article.content {
    margin: auto;
    min-width: 100px;
    max-width: 1280px;
    text-align: left;
    padding: 65px 32px;
}

.roster {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: row;
    margin: 40px auto;
}

.roster .person {
    position: relative;
    width: 300px;
    height: 350px;
    background-color: var(--primary);
    border-radius: 16px;
    margin: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.roster .person .data {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    transition: 0.5s;
    transform: translateY(-40px);
}

.roster .person:hover .data {
    transform: translateY(-50px);
}

.roster .person .data .picture {
    position: relative;
    width: 200px;
    height: 200px;
    overflow: hidden;
}

.roster .person .data .picture img {
    border-radius: 16px;
    height: 100%;
    left: 0;
    object-fit: cover;
    top: 0;
    width: 100%;
}

.roster .person .data .name h3 {
    color: var(--darker-accent);
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 700;
    font-size: 1.5em;
    text-align: center;
    margin: 10px 0 20px;
}

.roster .person .description {
    position: absolute;
    top: 230px;
    padding: 5px;
}

.roster .person .description li {
    list-style-position: outside;
    margin: 0 20px;
    transform: translateY(50px);
    transition: 0.5s;
    line-height: 1.5em;
    opacity: 0;
}

.roster .person:hover .description li {
    transform: translateY(20px);
    opacity: 1;
}

/* Styles for buttons */
.btn {
    padding: 10px 20px;
    color: var(--text);
    background: rgba(255, 255, 255, 0.2); /* Translucent white background */
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
    font-size: 20px;
    transition: background-color 0.3s ease, color 0.3s ease;
    margin: 10px;
    backdrop-filter: blur(5px); /* Apply a blur effect to the background */
}

/* Light theme button style */
[data-theme="light"] .btn {
    color: var(--accent); /* Change text color to match the accent color */
    background: rgba(255, 255, 255, 0.2); /* Translucent white background */
}

/* Dark theme button style */
[data-theme="dark"] .btn {
    color: var(--accent); /* Change text color to match the background color */
    background: rgba(0, 0, 0, 0.2); /* Translucent black background */
}

/* Hover effect for buttons */
.btn:hover {
    filter: brightness(0.9); /* Slight dimming on hover for all themes */
}

/* Hover effect for light theme */
[data-theme="light"] .btn:hover {
    background: rgba(255, 255, 255, 0.3); /* Slightly increase opacity on hover */
}

/* Hover effect for dark theme */
[data-theme="dark"] .btn:hover {
    background: rgba(0, 0, 0, 0.8); /* Massively increase opacity on hover */
}

/* scrollbar */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: var(--background);
}

::-webkit-scrollbar-thumb {
    background: var(--accent);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--darker-accent);
}

#hamburgerIcon {
    height: 100%;
    width: 100%;
}

.hamburger-icon {
    display: none; /* Hide by default on larger screens */
    background: transparent;
    border: none;
    padding: 0;
    height: 48px;
    width: 48px;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
}

@media screen and (max-width: 600px) {
    .navbar-buttons {
        color: var(--text);
        display: none;
        text-align: center;
        background-color: var(--secondary);
        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
        border-radius: 8px;
        position: absolute;
        top: 80px;
        left: 2%;
        right: 0;
        transform-origin: top;
        transform: scaleY(0);
        transition: opacity 0.3s ease, transform 0.3s ease;
        white-space: nowrap;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        max-width: 90%;
    }

    .navbar-buttons.show {
        display: block;
        opacity: 1;
        transform: scaleY(1);
    }

    .navbar-buttons li {
        display: inline-block;
        margin-bottom: 10px;
        white-space: nowrap;
    }

    .navbar-buttons a {
        color: var(--primary);
        text-decoration: none;
        font-weight: 700;
        font-size: 1.2em;
        text-align: center;
        display: inline-block;
        padding: 10px 5px 0 5px;
    }

    .navbar-buttons a:hover {
        color: var(--accent);
    }

    .hamburger-icon {
        display: inline-block;
    }

    .dropdown:hover .dropdown-content {
        display: block;
        opacity: 1;
        transform: scaleY(1);
    }
}

